--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,4 +1,12 @@
 @tailwind base;
-/* Write your global styles here, in PostCSS syntax */
 @tailwind components;
-@tailwind utilities
+@tailwind utilities;
+
+@layer base {
+	h1 {
+		@apply text-2xl;
+	}
+	h2 {
+		@apply text-xl;
+	}
+}
