--- a/src/app.postcss
+++ b/src/app.postcss
@@ -17,7 +17,7 @@
 	}
 
 	td {
-		@apply font-light;
+		@apply font-light text-center;
 	}
 
 	th {
@@ -25,6 +25,6 @@
 	}
 
 	button {
-		@apply border border-gray-200 rounded-lg bg-gray-50 shadow-md hover:bg-gray-400 hover:text-gray-50;
+		@apply border border-gray-200 rounded-lg bg-gray-50 font-semibold text-gray-400 shadow-md hover:bg-gray-400 hover:text-gray-50;
 	}
 }
